<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameScreen"

    android:id="@+id/game_screen_layout"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/game_screen_top_layer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


                <TextView
                    android:id="@+id/score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/score_label"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:fontFamily="@font/comfortaa"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="VisualLintOverlap" />

                <TextView
                    android:id="@+id/score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/zero_value"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:fontFamily="@font/comfortaa"
                    app:layout_constraintStart_toEndOf="@+id/score_label"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints,VisualLintOverlap" />


                <ImageView
                    android:id="@+id/selected_character"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/xiaoxin"
                    android:contentDescription="@string/xiaoxin"
                    app:layout_constraintEnd_toStartOf="@+id/level_label"
                    app:layout_constraintStart_toEndOf="@+id/score_value"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/level_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/level_label"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:fontFamily="@font/comfortaa"
                    app:layout_constraintEnd_toStartOf="@+id/level_value"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints,VisualLintOverlap" />

                <TextView
                    android:id="@+id/level_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:fontFamily="@font/comfortaa"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="84dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/name_label"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="VisualLintOverlap" />

                <TextView
                    android:id="@+id/name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="84dp"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/name_label" />


                <TextView
                    android:id="@+id/lives_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/luckiest_guy"
                    android:text="@string/lives_label"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="VisualLintOverlap" />


                <TextView
                    android:id="@+id/num_lives"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/luckiest_guy"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lives_label" />


                <Button
                    android:id="@+id/upButton"
                    android:layout_width="72dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="76dp"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/up_button"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/downButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="VisualLintOverlap" />

                <Button
                    android:id="@+id/downButton"
                    android:layout_width="72dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="76dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/down_button"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="VisualLintOverlap" />


                <Button
                    android:id="@+id/leftButton"
                    android:layout_width="72dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="36dp"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/left_button"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/downButton"
                    tools:ignore="VisualLintOverlap" />

                <Button
                    android:id="@+id/rightButton"
                    android:layout_width="72dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="36dp"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/right_button"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/downButton"
                    tools:ignore="VisualLintOverlap" />


                <GridLayout
                    android:id="@+id/tile_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="10"
                    android:rowCount="15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.27">
                </GridLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/vehicle_region"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent">
                </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>